--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dac",
     "version": "0.1.5",
-    "description": "Dynamic Assets Compile",
+    "description": "Dynamic Assets Compiler",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
