--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dac",
-  "version": "0.6.5",
+  "version": "0.7.0",
   "description": "Dynamic Assets Compiler",
   "main": "index.js",
   "scripts": {},
@@ -17,11 +17,14 @@
     "url": "https://github.com/Clamjs/dac.git"
   },
   "dependencies": {
-    "iconv-lite": "~0.4.11",
+    "iconv-lite": "~0.4.13",
     "is-utf8": "~0.2.0",
     "juicer": "~0.6.11",
-    "less": "~2.5.1"
+    "less": "~2.5.3"
   },
   "author": "limingv5",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "clean-css": "~3.4.8"
+  }
 }
