--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dac",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "description": "Dynamic Assets Compiler",
   "main": "index.js",
   "scripts": {},
@@ -17,11 +17,12 @@
     "url": "https://github.com/Clamjs/dac.git"
   },
   "dependencies": {
-    "clean-css": "~3.4.9",
+    "clean-css": "~3.4.10",
     "iconv-lite": "~0.4.13",
     "is-utf8": "~0.2.1",
-    "juicer": "~0.6.11",
-    "less": "~2.6.0"
+    "juicer": "~0.6.13",
+    "less": "~2.6.1",
+    "minimatch": "~3.0.0"
   },
   "author": "limingv5",
   "license": "ISC"
