--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dac",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Dynamic Assets Compiler",
   "main": "index.js",
   "scripts": {},
@@ -22,7 +22,10 @@
     "is-utf8": "~0.2.1",
     "juicer": "~0.6.13",
     "less": "~2.6.1",
-    "minimatch": "~3.0.0"
+    "minimatch": "~3.0.0",
+    "babel-core": "~6.7.4",
+    "babel-preset-es2015": "~6.6.0",
+    "babel-preset-stage-3": "~6.3.13"
   },
   "author": "limingv5",
   "license": "ISC"
